# template-hello-world-project

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  _clang-format  my_builder.py
scripts/: __init__.py  builder_build.py  builder_config.py  builder_main.py  builder_system_tests.py  cmake_utils.py  my_generic_parser.py  my_utils.py  python-format  requirements.txt
scripts/cmake/: FindSources.cmake  gtest.cmake
src/app/: main.cpp
src/lib/: source_1.cpp  source_1.h
src/lib/subfolder/: source_2.cpp  source_2.h
src/tests/: main.cpp
